Edição realizada em outra aula

--- a/EX003/index.html
+++ b/EX003/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,12 @@
     <title>Imagem</title>
 </head>
 <body>
-    
+    <h1> Testando carga e imagem</h1>
+    <p> Aqui será anexado uma imagem que está em minha pasta</p>
+    <img src="css3atualizada.png" alt="Logo CSS">
+    <p> Nova maneira de colocar imagens que estão em sub-pastas </p> 
+    <img src="imagem/logo.htlm.atualizada.png" alt="Logo HTLM"> 
+    <p> Também podemos carregar imagens externas </p>
+    <img src="https://a.thumbs.redditmedia.com/zDOFJTXd6fmlD58VDGypiV94Leflz11woxmgbGY6p_4.png" alt="logo JavaScript"> <!--URL-->
 </body>
 </html>
